--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ end
 
 <p>View models feature template rendering: You can render any partial in your views, following your views directory tree structure: A view_model variable will automatically be included as a local variable in your partial if you render it with view models:</p>
 
-<p>Let's say you have the user model from before, and the following partial written for the view model to render named "info":</p>
+<p>Let's say you have the user model from before, and the following partial written for the view model to render named "_info":</p>
 
 <pre><code>#user
   .name= view_model.name
